--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #DB7093;
+    background-color: #0000CD;
     color: black;
     padding: 1em;
     text-align: center;
